ckad/lightning-lab-1/question-2/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-network-policy
spec:
  podSelector:
    matchLabels:
      run: secure-pod
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: webapp-color
    ports:
      - protocol: TCP
        port: 80
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.1.1/32
    ports:
    - protocol: TCP
      port: 80
